# learnanything

./: .gitignore  CHANGELOG.md  README.md  documentation.md  implementation_plan_hypothesis_surfaces.md  learnloop.toml  product_definition.md  pyproject.toml  research_on_learning.md  spec.md  spec_augmentations.txt  spec_mvp.md  spec_new_improvements_v2.md  state.sqlite
apps/: learnloop-tauri\sidecar-debug.jsonl
calibration_bundles/: README.md  template.yaml
migrations/: 001_initial.sql  002_source_span_events.sql  003_proposal_item_audit.sql  004_allow_open_text_attempt_type.sql  005_attempt_feedback_metadata.sql  006_ai_provider_metadata.sql  007_recall_coverage_interventions.sql  008_ability_transition_events.sql  009_derived_state_rebuilds.sql  010_scheduler_training_logs.sql  011_training_dataset_logging.sql  026_question_event_answer_status.sql  027_question_promotions.sql  028_probe_episodes.sql  029_probe_selection_and_calibration.sql  030_probe_pilot_and_policy.sql  031_block_end_and_longform.sql  033_durable_ingest_jobs.sql  051_maintenance_feed.sql  053_attempt_submission_idempotency.sql  054_extraction_health.sql  055_hypothesis_events.sql  056_misconception_transitions.sql  057_forecast_ledger.sql  058_remediation_episodes.sql  059_probe_episode_origin.sql  110_probe_action_equivalence.sql  111_deterministic_grading_source.sql  112_learner_report_claim_source.sql  113_probe_completion_posterior.sql
tests/: conftest.py  helpers.py  test_agent_runs.py  test_ai_config.py  test_ai_runtime.py  test_annotations.py  test_answer_calibration_duel.py  (+139 more)
(+351 files in other folders)
